# AgentOps

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  langsmith.yaml  locustfile.py  phases.md
.github/workflows/: ci.yml
admin-dashboard/: Dockerfile  index.html  package.json
admin-dashboard/src/: App.tsx
admin-dashboard/src/api/: client.ts
admin-dashboard/src/hooks/: useAuth.ts
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  langserve_routes.py  main.py  observability.py  seed.py
backend/app/agents/: incident_graph.py  investigation_agent.py  remediation_agent.py  runbook_agent.py  triage_agent.py
backend/app/analytics/: __init__.py  eval_feedback.py  service.py
backend/app/api/: alerts.py  analytics.py  api_keys.py  auth.py  embeddings.py  engineers.py  incidents.py  integrations.py  pagination.py  triage.py  workflow.py
backend/app/integrations/: __init__.py  auto_remediation.py  github.py  models.py  pagerduty.py  slack.py
backend/app/middleware/: org_isolation.py  rate_limit.py
backend/app/models/: __init__.py  alert_event.py  engineer.py  incident.py  incident_embedding.py  organization.py  service.py
backend/app/schemas/: __init__.py  alert.py  auth.py  engineer.py  incident.py  triage.py
backend/app/services/: cache.py
backend/migrations/: env.py
backend/tests/: test_health.py
charts/agentops/: Chart.yaml  values.yaml
engineer-dashboard/: index.html  package.json  vite.config.ts
engineer-dashboard/src/: App.tsx
oncall-app/: App.tsx  app.json  package.json
(+19 files in other folders)
